2008-07-18  Jordi Mallach  <jordi@sindominio.net>

	* Get rid of all .cvsignore files, and add svn:ignore properties as
	needed.

	* configure.ac, doc/Makefile.am: Don't ship the GNOME-Mud manual
	for now, as it's outdated and not yet migrated to PO format.

	* configure.ac, src/Makefile.am, src/pixmaps, src/svg: Get rid of the
	old icons from the distribution.
	* src/Makefile.am, src/mud-tray.c: use the new SVG icon path for
	the tray icon.

	* src/Makefile.am: Fix typo in a filename which broke make dist.

2008-06-30  Les Harris  <me@lesharris.com>

	* configure.ac: Made gstreamer0.10 a conditional option, cleaned up
	a bit.

	* src/Makefile.am: Added MSP_CFLAGS and MSP_LIBS to build parameters.

	* src/gnome-mud.c, src/mud-connection-view.c,
	src/mud-telnet-handlers.[ch], src/mud-telnet-msp.[ch],
	src/mud-telnet.[ch]: Added conditionals to support disabling
	MSP support.

2008-06-30  Les Harris  <me@lesharris.com>

	* configure.ac: Added dependency for gstreamer0.10

	* gnome-mud-schemas.in: Added new schema for MSP remote downloading.

	* ui/prefs.glade: Added ui for MSP remote downloading.

	* ui/main.glade: Added downloading ui.

	* src/Makefile.am: Added files for MSP.

	* src/mud-msp-telnet.[ch]: New files which implement MSP.

	* src/gnome-mud.c: Added gstreamer initialization.

	* src/mud-connection-view.[ch]:  Added ui for downloading. Fixed
	disconnect and reconnect callbacks to propery dispose of and create
	the telnet object.  Changed the netcode to make a chain of processing
	such that a later link in the chain does not execute until the current
	link is finished.

	* src/mud-window.c: Fixed history code to avoid a potential crash when
	the history queue is empty.

	* src/mud-preferences-window.[ch], src/mud-profile.[ch],
	src/gconf-helper.c: Added in code to handle the new msp preference.

	* src/mud-telnet-handlers.[ch]: Added in MSP option handlers.

	* src/mud-telnet.[ch]: Added in MSP support. Changed mud_telnet_process