@@ -40,6 +40,13 @@ DISTCLEANFILES =		\
 
 DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install --disable-scrollkeeper
 
+if GCONF_SCHEMAS_INSTALL
 install-data-local:
-	-GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
-
+	if test -z "$(DESTDIR)" ; then \
+	  for p in $(schemas_DATA) ; do \
+	    GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$$p ; \
+          done \
+        fi
+else
+install-data-local:
+endif
